s3-db-app/modules/vpc/eip.tf
resource "aws_eip" "eip" {
  vpc        = true
  depends_on = [aws_internet_gateway.igw]
}
