s3-db-app/modules/vpc/ig.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name  = "${var.tag_name_prefix}-igw"
    Owner = var.tag_owner
  }
}
